k8s/specs/cd.yaml
apiVersion: v1
kind: Service
metadata:
  name: cd
spec:
  selector:
    app: cd
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cd
  labels:
    app: cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cd
  template:
    metadata:
      labels:
        app: cd
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: sitecore-mvp-cd
        image: sitecore-mvp-cd
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: 80
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Liveness
          timeoutSeconds: 300
          periodSeconds: 30
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /healthz/ready
            port: 80
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Startup
          timeoutSeconds: 300
          periodSeconds: 30
          failureThreshold: 10
        resources:
          requests:
            memory: 1Gi
            cpu: 100m
          limits:
            memory: 3Gi
            cpu: 2000m
      imagePullSecrets:
      - name: regcred
