k8s/specs/mvp-rendering.yaml
apiVersion: v1
kind: Service
metadata:
  name: mvp-rendering
spec:
  selector:
    app: mvp-rendering
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvp-rendering
  labels:
    app: mvp-rendering
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvp-rendering
  template:
    metadata:
      labels:
        app: mvp-rendering
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: sitecore-mvp-rendering
        image: sitecore-mvp-rendering
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Liveness
          timeoutSeconds: 60
          periodSeconds: 30
          failureThreshold: 3
      imagePullSecrets:
      - name: regcred
